--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <div class="head">  
-            <img src="asset/SAVE_20230227_180441.jpg">
+            <img src="https://github.com/abhishek-v-gopal/personal-web-page/blob/f0527a86bf3eb346d13a28c04b6f9346f32fc73c/SAVE_20230227_180441.jpg">
             <div class="link">
                 <h3><a href="#about">About</a></h3>
                 <h3><a href="#skills">Skills</a></h3>
