--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="subbox">
                 <h1 id="resume">Resume</h1>
-                <button class="button"><a href="https://drive.google.com/file/d/1A25fjBjil_5m445-s5Ok17U_xJEgIBUd/view?usp=share_link">click here</a></button>
+                <button class="button"><a href="https://drive.google.com/file/d/1A25fjBjil_5m445-s5Ok17U_xJEgIBUd/view?usp=share_link">Click here</a></button>
                 
             </div>
             <div class="subbox">
