changed about, added intrest

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="content">
             <div class="subbox">
                 <h1 id="about">About</h1>
-                <p>Hello, everyone! My name is Abhishek V Gopal and I'm from kerala,India.I'm currently studying BCA at Kristu Jyoti College of Management & Technology, and I hope to become ceo of a company one day.I'm really passionate about Technology, and I'm always looking for new ways to learn and improve my skills.</p>
+                <p>I am Abhishek V Gopal, a student at Kristu Jyoti College of Management and Technology, Changanassery. I am currently in my second semester of my Bachelor of Computer Applications (BCA) degree. I am interested in developing static web pages and IoT projects. I have some experience in both of these areas. I have developed a few static web pages using HTML, CSS, and JavaScript. I have also developed a few IoT projects using Arduino and Raspberry Pi. I am passionate about learning new things and I am always looking for new challenges. I am also a creative person and I enjoy writing, painting, and playing the guitar. I am looking forward to a bright future and I am confident that I will achieve my goals.</p>
 
             </div>
             <div class="subbox">
@@ -36,9 +36,20 @@
                     <li>Iot</li>
                     <li>HTML & CSS</li>
                     <li>figm</li>
-                    <li>Communication</li>
+                    <li>Team work</li>
+                    <li>Problem solving</li>
                 </ul>
             </div>
+
+            <div class="subbox">
+                <h1 id="interests">Interests</h1>
+                <ul>
+                    <li>Technology</li>
+                    <li>Music</li>
+                    <li>Arts</li>
+                </ul>
+            </div>
+
             <div class="subbox">
                 <h1 id="project">Project</h1>
                 <ul>
