--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="subbox">
                 <h1 id="skills">Skills</h1>
                 <ul>
-                    <li>Iot</li>
+                    <li>IOT</li>
                     <li>HTML & CSS</li>
                     <li>figm</li>
                     <li>Team work</li>
