image is responsible

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="main">
         <div class="head">  
-            <img src="SAVE_20230227_180441.jpg">
+            <div class="containers">
+                <img src="SAVE_20230227_180441.jpg" class="image" style="width:100%;">
+              </div>
             <div class="link">
                 <h3><a href="#about">About</a></h3>
                 <h3><a href="#skills">Skills</a></h3>
