--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <div class="content">
             <div class="subbox">
                 <h1 id="about">About</h1>
-                <p>I am Abhishek V Gopal, a student at Kristu Jyoti College of Management and Technology, Changanassery. I am currently in my second semester of my Bachelor of Computer Applications (BCA) degree. I am interested in developing static web pages and IoT projects. I have some experience in both of these areas. I have developed a few static web pages using HTML, CSS, and JavaScript. I have also developed a few IoT projects using Arduino and Raspberry Pi. I am passionate about learning new things and I am always looking for new challenges. I am also a creative person and I enjoy writing, painting, and playing the guitar. I am looking forward to a bright future and I am confident that I will achieve my goals.</p>
+                <p>I am Abhishek V Gopal, a student at Kristu Jyoti College of Management and Technology, Changanassery. I am currently in my second semester of my Bachelor of Computer Applications (BCA) degree. I am interested in developing static web pages and IoT projects. I have some experience in both of these areas. I have developed a few static web pages using HTML, CSS, and JavaScript. I have also developed a few IoT projects using Arduino. I am passionate about learning new things and I am always looking for new challenges. I am also a creative person and I enjoy writing, painting, and playing the Mridhangam. I am looking forward to a bright future and I am confident that I will achieve my goals.</p>
 
             </div>
             <div class="subbox">
                 <h1 id="skills">Skills</h1>
                 <ul>
-                    <li>IOT</li>
+                    <li>IoT</li>
                     <li>HTML & CSS</li>
-                    <li>figm</li>
+                    <li>figma</li>
                     <li>Team work</li>
                     <li>Problem solving</li>
                 </ul>
@@ -56,10 +56,10 @@
             <div class="subbox">
                 <h1 id="project">Project</h1>
                 <ul>
-                    <li>Bluetooth controled car</li>
-                    <li>room automation using solinoid lock and rfid</li>
-                    <li>Obstacles dectecting blind stick</li>
-                    <li>Room automation </li>
+                    <li>Bluetooth Controlled car</li>
+                    <li>Room Automation using Solinoid Lock and RFID</li>
+                    <li>Obstacles Dectecting Blind Stick</li>
+                    <li>Room Automation </li>
                 </ul>
             </div>
             <div class="subbox">
@@ -79,7 +79,7 @@
                     </tr>
                     <tr>
                         <td>BCA</td>
-                        <td>Mahatma Gandi Unniversity</td>
+                        <td>Mahatma Gandi University</td>
                         <td>Kristu Jyoti College of Management and Technology</td>
                         <td>--</td>
                         <td>2025</td>
