--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="personal.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
         <div class="content">
             <div class="subbox">
                 <h1 id="about">About</h1>
-                <p>I am Abhishek V Gopal, a student at Kristu Jyoti College of Management and Technology, Changanassery. I am currently in my second semester of my Bachelor of Computer Applications (BCA) degree. I am interested in developing static web pages and IoT projects. I have some experience in both of these areas. I have developed a few static web pages using HTML, CSS, and JavaScript. I have also developed a few IoT projects using Arduino. I am passionate about learning new things and I am always looking for new challenges. I am also a creative person and I enjoy writing, painting, and playing the Mridhangam. I am looking forward to a bright future and I am confident that I will achieve my goals.</p>
+                <p class="just">I am Abhishek V Gopal, a student at Kristu Jyoti College of Management and Technology, Changanassery. I am currently in my second semester of my Bachelor of Computer Applications (BCA) degree. I am interested in developing static web pages and IoT projects. I have some experience in both of these areas. I have developed a few static web pages using HTML, CSS, and JavaScript. I have also developed a few IoT projects using Arduino. I am passionate about learning new things and I am always looking for new challenges. I am also a creative person and I enjoy writing, painting, and playing the Mridhangam. I am looking forward to a bright future and I am confident that I will achieve my goals.</p>
 
             </div>
             <div class="subbox">
@@ -75,7 +75,7 @@
                         <th>Board</th>
                         <th>Institution</th>
                         <th>%</th>
-                        <th>Y ear</th>
+                        <th>Year</th>
                     </tr>
                     <tr>
                         <td>BCA</td>
@@ -104,7 +104,7 @@
             </div>
             <hr>
             <section class="contact">
-            <div class="contact">
+            <div class="contact  ">
                 <center>
                 <table>
                     <h2 id="contact">Contact Information</h2>
