--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul>
                     <li>IoT</li>
                     <li>HTML & CSS</li>
-                    <li>figma</li>
+                    <li>Figma</li>
                     <li>Team work</li>
                     <li>Problem solving</li>
                 </ul>
@@ -56,9 +56,9 @@
             <div class="subbox">
                 <h1 id="project">Project</h1>
                 <ul>
-                    <li>Bluetooth Controlled car</li>
+                    <li>Bluetooth Controlled Car</li>
                     <li>Room Automation using Solinoid Lock and RFID</li>
-                    <li>Obstacles Dectecting Blind Stick</li>
+                    <li>Obstacle Detecting Blind Stick</li>
                     <li>Room Automation </li>
                 </ul>
             </div>
@@ -93,8 +93,8 @@
                     </tr>
                     <tr>
                         <td>10th</td>
-                        <td>kerala</td>
-                        <td>St.Xavier's HS</td>
+                        <td>Kerala</td>
+                        <td>St.Xavier's HS ,Mithrakary</td>
                         <td>85%</td>
                         <td>2020</td>
                     </tr>
